initial renderering; fixed minor errors with apostrophes in lec2-3

--- a/index.qmd
+++ b/index.qmd
@@ -3,12 +3,11 @@ title: "STA 210: Regression Analysis"
 tbl-colwidths: [5,10,30,5,5,5,5,5,5,5]
 ---
 
-This page contains an outline of the topics, content, and assignments for the semester.
-Note that this schedule will be updated as the semester progresses, with all changes documented here.
+This page contains an outline of the topics, content, and assignments for the semester. Note that this schedule will be updated as the semester progresses, with all changes documented here.
 
 ::: column-screen-inset-right
 |           Week            | Date        | Topic                                                                                                                     |                             Prepare                             |                                   Slides                                   |                                                       AE                                                        |                                                                                                   Lab                                                                                                   |                                                                                       HW                                                                                       |                            Exam                            |                                                                                                                                                                                                                                                                                                                       Project                                                                                                                                                                                                                                                                                                                        |
-|:------:|--------|--------|:------:|:------:|:------:|:------:|:------:|:------:|:------:|
+|:-------------------------:|-------------|---------------------------------------------------------------------------------------------------------------------------|:---------------------------------------------------------------:|:--------------------------------------------------------------------------:|:---------------------------------------------------------------------------------------------------------------:|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|:----------------------------------------------------------:|:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|
 |  [1](/weeks/week-1.html)  | Wed, Jan 5  | Lab 0 - Meet + greet                                                                                                      |                                                                 |      [🖥️](/slides/lab-0.html "Lab slides"){aria-label="Lab 0 slides"}      |                                                                                                                 |                                                               [💻](/labs/lab-0.html "Lab instructions"){aria-label="Lab 0 instructions"}                                                                |                                                                                                                                                                                |                                                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
 |                           | Thu, Jan 6  | Welcome to STA 210!                                                                                                       |  [📖](/weeks/week-1.html#prepare){aria-label="Week 1 summary"}  |  [🖥️](/slides/lec-1.html "Lecture slides"){aria-label="Lecture 1 slides"}  |       [📋](/ae/ae-0-movies.html "Application exercise"){aria-label="Application Exercise 0 instructions"}       |                                                                                                                                                                                                         |                                                                                                                                                                                |                                                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
 |  [2](/weeks/week-2.html)  | Mon, Jan 10 | Lab 1 - Meet the toolkit                                                                                                  |                                                                 |      [🖥️](/slides/lab-1.html "Lab slides"){aria-label="Lab 1 slides"}      |                                                                                                                 |                                                               [💻](/labs/lab-1.html "Lab instructions"){aria-label="Lab 1 instructions"}                                                                |                                                                                                                                                                                |                                                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
@@ -88,5 +87,5 @@ knitr::knit_exit()
 ```
 
 |      |      |       | Prepare | Slides | AE  |                                                    Labs                                                    | HW  | Exam | Project |
-|--------|--------|--------|:------:|:------:|:------:|:------:|:------:|:------:|:------:|
+|------|------|-------|:-------:|:------:|:---:|:----------------------------------------------------------------------------------------------------------:|:---:|:----:|:-------:|
 | Week | Date | Topic |   📖    |   🖥️   | 📋  | [💻](https://sakai.duke.edu/samigo-app/servlet/Login?id=6fa7ebf3-01af-42a6-91ba-3e813d3901221641094171786) | ✍️  |  ✅  |   📂    |
